changed application dashboard to display correct location attributes. Added correct location to defaults and openmrs*.sql. removed treatment encounter from app. dashboard, changed physical observation to physical observation needed in outcome

--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -46,7 +46,7 @@
      :condition => "$('select_outcome').value != 'GIVEN ADVICE NO REFERRAL NEEDED'"
      } %>
 
-  <%@reasons_for_referral = ["","DANGER SIGNS OBSERVED", "PHYSICAL OBSERVATION"]%>
+  <%@reasons_for_referral = ["","DANGER SIGNS OBSERVED", "PHYSICAL OBSERVATION NEEDED"]%>
 
   <%= select_tag("referral_reason", options_for_select(@reasons_for_referral), options)%>
   <%= hidden_field_tag("observations[][concept_name]",        "REASON FOR REFERRAL") %>
