--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -5,8 +5,8 @@
 
 <div id="home">
   <div id="project_name"><span style="font-size: 0.4em;">Hotline</span></div>
-  <div id="facility"><%= Location.current_location.name %></div>
-  <div id="location"><%= version_without_date %></div>
+  <div id="facility"><%= Location.current_health_center.name %></div>
+  <div id="location"><%= Location.current_location.name %></div>
   <div id="date"><%=system_date%></div>
 
   <div id="user"><%= User.current_user.username %></div>
