added code to hide suppress the barcode scanner

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -1,6 +1,7 @@
 <script language="javascript">
   tt_cancel_destination = "/clinic/irrelevantcall";
   tt_cancel_show = "/people/search";
+  tstSuppressBarcode = true;
 </script>
 
 <div id="home">
