added code to hide suppress the barcode scanner

--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -1,6 +1,7 @@
 <script language="javascript">
   tt_cancel_destination = "/logout";
   tt_cancel_show = "/clinic/call?task=new";
+  tstSuppressBarcode = true;
 </script>
 
 <div id="home">
