--- a/application/app/views/encounters/female_symptoms.rhtml
+++ b/application/app/views/encounters/female_symptoms.rhtml
@@ -4,18 +4,29 @@
 
 var symptoms_values = [];
 
-function setConceptNamesAndValues(symptoms, observations, obs_type){
+function setConceptNamesAndValues(symptoms, observations, obs_type, symptomType){
 
     var values_string = selectedValue(observations);
-
+    
     /* clear the fields*/
   for (var index = 0; index < symptoms.length; index++){
     var concept_name        = obs_type + index +"_concept_name";
     var value_coded_or_text = obs_type + index +"_value_coded_or_text";
 
+    var duplicateSymptoms= "POSTNATAL FEVER;FEVER DURING PREGNANCY;FITS OR CONVULSIONS;SWOLLEN HANDS OR FEET;PALENESS OF THE SKIN AND TIREDNESS;NO FETAL MOVEMENTS;WATER BREAKS";
     
     if(values_string.contains(symptoms[index]) && symptoms[index]!= ""){
       $(concept_name).value         = symptoms[index];
+      if (symptomType == "Danger") {
+        if (duplicateSymptoms.contains(symptoms[index])) {
+          $(concept_name).value += " SIGN";
+        }
+      } 
+      else if (symptomType == "Symptom") {
+        if (duplicateSymptoms.contains(symptoms[index])) {
+          $(concept_name).value += " SYMPTOM";
+        }
+      }
       $(value_coded_or_text).value  = 'YES';
     }
     else{
@@ -47,7 +58,7 @@ function setConceptNamesAndValues(symptoms, observations, obs_type){
 		{:id => "pregnancy_symptoms_id",
       :multiple     => true,
       :optional     => true,
-      :tt_onUnLoad  => "setConceptNamesAndValues(symptoms_values, 'pregnancy_symptoms_id', 'pregnancy_symptom');",
+      :tt_onUnLoad  => "setConceptNamesAndValues(symptoms_values, 'pregnancy_symptoms_id', 'pregnancy_symptom', 'Symptom');",
 		 :helptext      => "Experiencing any of the following symptoms?" } %>
 
   <%  @pregnancy_symptoms.each_with_index do |e, index| %>
@@ -69,7 +80,7 @@ function setConceptNamesAndValues(symptoms, observations, obs_type){
 		{:id          => "maternal_health_info_id",
      :multiple    => true,
      :optional     => true,
-     :tt_onUnLoad => "setConceptNamesAndValues(maternal_health_values, 'maternal_health_info_id', 'maternal_health_info');",
+     :tt_onUnLoad => "setConceptNamesAndValues(maternal_health_values, 'maternal_health_info_id', 'maternal_health_info', 'N/A');",
 		 :helptext    => "Does the caller want information on one of the following topics?" } %>
 
   <% @maternal_health_info.each_with_index do |e, index| %>
@@ -92,7 +103,7 @@ function setConceptNamesAndValues(symptoms, observations, obs_type){
 		{:id          => "danger_signs_id",
      :multiple    => true,
      :optional     => true,
-     :tt_onUnLoad => "setConceptNamesAndValues(danger_signs_values, 'danger_signs_id', 'danger_sign');",
+     :tt_onUnLoad => "setConceptNamesAndValues(danger_signs_values, 'danger_signs_id', 'danger_sign', 'Danger');",
 		 :helptext    => "Select the danger signs for pregnancy" } %>
 
   <% @danger_signs.each_with_index do |e, index| %>
