--- a/application/app/views/encounters/female_symptoms.rhtml
+++ b/application/app/views/encounters/female_symptoms.rhtml
@@ -57,6 +57,22 @@ function setConceptNamesAndValues(symptoms, observations, obs_type){
     <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
   <%end%>
 
+<% @danger_signs = ["", "HEAVY VAGINAL BLEEDING DURING PREGNANCY",
+                      "EXCESSIVE POSTNATAL BLEEDING", "FEVER DURING PREGNANCY",
+                      "POSTNATAL FEVER", "SEVERE HEADACHE", "FITS OR CONVULSIONS",
+                      "SWOLLEN HANDS OR FEET", "PALENESS OF THE SKIN AND TIREDNESS",
+                      "NO FETAL MOVEMENTS", "WATER BREAKS"] %>
+
+  <script type="text/javascript" language="javascript">
+    danger_signs_values = <%= to_jsarray(@danger_signs) %> ;
+  </script>
+	<%= select_tag "first_danger_signs",options_for_select(@danger_signs),
+		{:id          => "first_danger_signs_id",
+     :multiple    => true,
+     :optional     => true,
+     :tt_onUnLoad => "setConceptNamesAndValues(danger_signs_values, 'first_danger_signs_id', 'danger_sign');setSelectedItems('second_danger_signs_id', selectedValue('first_danger_signs_id'));",
+		 :helptext    => "Select the danger signs" } %>
+
 <% @maternal_health_info = ["", "HEALTHCARE VISITS", "NUTRITION", "BODY CHANGES",
                             "DISCOMFORT", "CONCERNS", "EMOTIONS",
                             "WARNING SIGNS", "ROUTINES", "BELIEFS",
@@ -79,21 +95,15 @@ function setConceptNamesAndValues(symptoms, observations, obs_type){
     <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
   <%end%>
 
-  <% @danger_signs = ["", "HEAVY VAGINAL BLEEDING DURING PREGNANCY",
-                      "EXCESSIVE POSTNATAL BLEEDING", "FEVER DURING PREGNANCY",
-                      "POSTNATAL FEVER", "SEVERE HEADACHE", "FITS OR CONVULSIONS",
-                      "SWOLLEN HANDS OR FEET", "PALENESS OF THE SKIN AND TIREDNESS",
-                      "NO FETAL MOVEMENTS", "WATER BREAKS"] %>
-
   <script type="text/javascript" language="javascript">
     danger_signs_values = <%= to_jsarray(@danger_signs) %> ;
   </script>
-	<%= select_tag "danger_signs",options_for_select(@danger_signs),
-		{:id          => "danger_signs_id",
+	<%= select_tag "second_danger_signs",options_for_select(@danger_signs),
+		{:id          => "second_danger_signs_id",
      :multiple    => true,
      :optional     => true,
-     :tt_onUnLoad => "setConceptNamesAndValues(danger_signs_values, 'danger_signs_id', 'danger_sign');",
-		 :helptext    => "Select the danger signs for pregnancy" } %>
+     :tt_onUnLoad => "setConceptNamesAndValues(danger_signs_values, 'second_danger_signs_id', 'danger_sign'); setSelectedItems('first_danger_signs_id', selectedValue('second_danger_signs_id'));",
+		 :helptext    => "Select additional danger signs if any" } %>
 
   <% @danger_signs.each_with_index do |e, index| %>
     <%= hidden_field_tag("observations[][concept_name]",        "", {:id => "danger_sign#{index}_concept_name"}) %>
