added a proper link to the tabs for previous tips and reminders

--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -40,7 +40,7 @@
     <option value="/patients/visit_summary?patient_id=<%=@patient.id%>">Current Call</option>
     <option value="/patients/previous_symptoms?patient_id=<%=@patient.id%>">Symptoms History</option>
     <option value="/patients/recent_calls?patient_id=<%=@patient.id%>">Recent Calls</option>
-    <option value="">Tips and Reminders</option>
+    <option value="/patients/previous_tips_and_reminders?patient_id=<%=@patient.id%>">Tips and Reminders</option>
   </select>
 
   <select id="links">
