Made changes in line with new functionality for adding clinics

--- a/application/app/views/clinic/administration.html.erb
+++ b/application/app/views/clinic/administration.html.erb
@@ -24,13 +24,8 @@
       <div id="buttons" style="height: 304px;margin-top: 200px;margin-left: 20px;">
         <h2>Select administrative task</h2>
         <base target="_parent">
-            <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.parent.location= '/clinic/users?dashboard=clinic_administration'" target="_parent "class="blue"><span>User Management</span></button><br/>
-            <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.parent.location = '/clinic/schedules?dashboard=clinic_administration&source_url=clinic_dashboard'" target="_parent" class="blue"><span>Clinic Schedules</span></button><br/>
-        <!--
-            <button style="margin: 5px 0px 0px; min-width: 190px;" onMouseDown="window.parent.location= '/clinic/users?dashboard=clinic_administration'" target="_parent "class="blue"><span>User Management</span></button><br/>
-            <button style="margin: 5px 0px 0px; min-width: 190px;" onMouseDown="window.parent.location = '/clinic/schedules?dashboard=clinic_administration'" target="_parent" class="blue"><span>Clinic Schedules</span></button><br/>
-        -->
-
+            <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.parent.location= '/clinic/users?dashboard=clinic_administration'" target="_parent "class="blue"><span>Manage Users</span></button><br/>
+            <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.parent.location = '/clinic/clinichome?active_tab=tab3&dashboard=clinic_administration&source_url=clinic_dashboard'" target="_parent" class="blue"><span>Manage Clinics</span></button><br/>
         </base>
       </div>
       <!--/div-->
