Added fix to allow for redirections from 'outcome' view to 'clinic schedules' view

--- a/application/app/views/clinic/schedules.html.erb
+++ b/application/app/views/clinic/schedules.html.erb
@@ -3,8 +3,8 @@
 <script language="javascript">
   tt_cancel_destination = "<%= @destination %>";
   tt_cancel_show = "<%= @destination %>";
-
   var destination = "<%= @destination %>";
+  tstSuppressBarcode = true;
 
   jQuery(document).ready(function($) {
     $('#back').click(function() { window.location = destination })
