modified the referal reason to be the  one that is required

--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -41,16 +41,16 @@
 
   <% options = {
      :id          => "referral_reason",
-     :tt_onUnLoad => "$('outcome_value_coded_or_text').value = $('select_outcome').value",
+     :tt_onUnLoad => "$('referral_reason_value_coded_or_text').value = $('referral_reason').value",
      :helpText    => "Select reason for refferal",
      :condition => "$('select_outcome').value != 'GIVEN ADVICE NO REFERRAL NEEDED'"
      } %>
 
-  <%@reasons_for_referral = ["","DANGER SIGNS OBSERVED", "PHYSICAL OBSERVATION NEEDED"]%>
+  <%@reasons_for_referral = ["","DANGER SIGNS OBSERVED", "PHYSICAL EXAMINATION NEEDED"]%>
 
   <%= select_tag("referral_reason", options_for_select(@reasons_for_referral), options)%>
   <%= hidden_field_tag("observations[][concept_name]",        "REASON FOR REFERRAL") %>
-  <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'reasons_for_referral_value_coded_or_text'}) %>
+  <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'referral_reason_value_coded_or_text'}) %>
   <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
   <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
 
