fixed errors with touchscreen toolkit changes, and also fixed the navigation for administrative tasks

--- a/application/app/views/clinic/clinichome.html.erb
+++ b/application/app/views/clinic/clinichome.html.erb
@@ -1,10 +1,3 @@
-<script language="javascript">
-  tt_cancel_destination = "/logout";
-  tt_cancel_show = "/clinic/call?task=new";
-  tstSuppressBarcode = true;
-   tt_active_tab = <%="'#{@tt_active_tab}'"%>;
-</script>
-
 <div id="home">
   <div id="project_name"><span style="font-size: 0.4em;">Hotline</span></div>
   <div id="facility"><%= Location.current_health_center.name%></div>
@@ -12,6 +5,14 @@
   <div id="date"><%=system_date%></div>
 
   <div id="user"><%= User.current_user.username %></div>
+
+	<script language="javascript">
+	  tt_cancel_destination = "/logout";
+	  tt_cancel_show = "/clinic/call?task=new";
+	  tstSuppressBarcode = true;
+		ttActiveTab = "<%=@tt_active_tab %>";
+	</script>
+
   <select id="tabs">
     <option value='/clinic/overview' target="_parent">Overview</option>
     <option value=''>Reports</option>
