--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -2,7 +2,7 @@
   tt_cancel_destination = "/logout";
   tt_cancel_show = "/clinic/call?task=new";
   tstSuppressBarcode = true;
-  tt_active_tab = <%="'#{@tt_active_tab}'"%>;
+  ttActiveTab = <%="'#{@tt_active_tab}'"%>;
 </script>
 
 <div id="home">
