--- a/application/app/views/user/change_password.rhtml
+++ b/application/app/views/user/change_password.rhtml
@@ -1,5 +1,5 @@
 <script>
-  var tt_cancel_destination = "/clinic/users"
+  var tt_cancel_destination = "/clinic?active_tab=tab3"
 </script>
 <h1>Editing user</h1>
 <%= javascript_include_tag  "cancel_to_user_menu"%>
