--- a/application/app/views/user/new.rhtml
+++ b/application/app/views/user/new.rhtml
@@ -1,7 +1,6 @@
 <script>
-  var tt_cancel_destination = "/clinic/users"
+  var tt_cancel_destination = "/clinic?active_tab=tab3"
 </script>
-
 <% form_tag :action => 'create' do -%>
   <%= render :partial => 'form' %>
   <%= submit_tag "Create" %>
