--- a/application/app/views/clinic/new.rhtml
+++ b/application/app/views/clinic/new.rhtml
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  tt_cancel_destination = "/people?active_tab=tab3"; 
+  tt_cancel_destination = "/clinic?active_tab=tab3";
 </script>
 
 <% form_tag :action => @act do -%>
