--- a/application/app/views/layouts/application.rhtml
+++ b/application/app/views/layouts/application.rhtml
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= javascript_include_tag "jquery" %>
     <%= javascript_include_tag "preload" %>
-    <%= javascript_include_tag "touchscreen" %>
+    <%= javascript_include_tag "standard" %>
     <%= javascript_include_tag "utils" %>
     <%= javascript_include_tag "dateselector" %>
   </head>
