--- a/application/app/views/user/edit.rhtml
+++ b/application/app/views/user/edit.rhtml
@@ -1,5 +1,5 @@
 <script>
-  var tt_cancel_destination = "/clinic/users"
+  var tt_cancel_destination = "/clinic?active_tab=tab3"
 </script>
 <% form_tag :action => 'update', :id => @user.id do %>
   <%= render :partial => 'form' %>
