--- a/application/app/views/user/select_user.html.erb
+++ b/application/app/views/user/select_user.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  var tt_cancel_destination = "/clinic/users"
+  var tt_cancel_destination = "/clinic?active_tab=tab3"
 </script>
  
   <% form_tag "search_user", :method => :post do %>
