re-added utils.js and fixed navigation

--- a/application/app/views/people/find_by_national_id.rhtml
+++ b/application/app/views/people/find_by_national_id.rhtml
@@ -1,6 +1,6 @@
 <%= javascript_include_tag "prototype" %>
 <script type="text/javascript">
-  var tt_cancel_destination = "/clinic/call_dashboard"
+  var tt_cancel_destination = "/clinic/home"
 
   function arvCode(){
     inputElement = document.getElementById('tt_page_enter_national_id').getElementsByTagName("input")[0]
