--- a/application/app/views/user/show.html.erb
+++ b/application/app/views/user/show.html.erb
@@ -1,5 +1,5 @@
 <script>
-   var tt_cancel_destination = "/clinic/users"
+   var tt_cancel_destination = "/clinic?active_tab=tab3"
 </script>
 <style>
   h1 { padding-left:10px; }
