--- a/application/app/views/patients/visit_summary.rhtml
+++ b/application/app/views/patients/visit_summary.rhtml
@@ -23,13 +23,20 @@
 
                 <%if header == true %>
                   <%header_title = encounter.name.humanize.titleize%>
-                  <tr> <th class="visit-summary-header" colspan="2" style="height:2px;"><%=h(header_title)%></th> </tr>
+                  <tr> <th class="visit-summary-header" colspan="3" style="height:2px;"><%=h(header_title)%></th> </tr>
                 <%end%>
                 <% header = false%>
                 <tr>
                   <td>
                     <%= encounter.to_s %>
                   </td>
+
+                  <td  style="width: 50px;">
+                    <%=img_button_submit_to("#{@editing_url[encounter.name]}#{@patient.patient_id}", "/images/pencil.png",
+                      {:container_id => "visit-summary", :form_id => "frm_current_encounter_"+i.to_s},
+                      {:encounter_id => encounter.encounter_id, :editing => "true"}) if encounter.name != "REGISTRATION" -%>
+                  </td>
+
                   <td>
                     <%=img_button_submit_to("/patients/show/#{@patient.patient_id}", "/images/cancel_flat_small_red.png",
                       {:confirm => "Are you sure you want to void this entry?", :container_id => "visit-summary", :form_id => "frm_current_encounter_"+i.to_s},
