--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -20,7 +20,7 @@
               "PATIENT TRIAGED TO NURSE SUPERVISOR",
               "GIVEN ADVICE NO REFERRAL NEEDED"]%>
 
-  <%= select_tag("select_outcome", options_for_select(@outcome), options)%>
+  <%= select_tag("select_outcome", options_for_select(@outcome, @encounter_answers[:outcome]), options)%>
   <%= hidden_field_tag("observations[][concept_name]",        "OUTCOME") %>
   <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'outcome_value_coded_or_text'}) %>
   <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
@@ -33,7 +33,7 @@
     :condition    => "$('select_outcome').value == 'REFERRED TO A HEALTH CENTRE'"
 	} %>
 
-  <%= select_tag("health_center", options_for_select(@health_facilities),options)%>
+  <%= select_tag("health_center", options_for_select(@health_facilities, @encounter_answers[:health_facility_name]),options)%>
   <%= hidden_field_tag("observations[][concept_name]",        "HEALTH FACILITY NAME", options) %>
   <%= hidden_field_tag("observations[][value_coded_or_text]", nil, {:id => 'health_center_value_coded_or_text'}) %>
   <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
@@ -48,11 +48,16 @@
 
   <%@reasons_for_referral = ["","DANGER SIGNS OBSERVED", "PHYSICAL EXAMINATION NEEDED"]%>
 
-  <%= select_tag("referral_reason", options_for_select(@reasons_for_referral), options)%>
+  <%= select_tag("referral_reason", options_for_select(@reasons_for_referral, @encounter_answers[:reason_for_referral]), options)%>
   <%= hidden_field_tag("observations[][concept_name]",        "REASON FOR REFERRAL") %>
   <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'referral_reason_value_coded_or_text'}) %>
   <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
   <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
+
+  <%unless @encounter_id.nil?%>
+    <%= hidden_field_tag("encounter_id",  @encounter_id) %>
+    <%= hidden_field_tag("editing",       true) %>
+  <%end%>
 
   <%= submit_tag "Finish" %>    
  </form>
